[package]
name = "cheat"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.30",  features = ["derive", "env"] }
dirs = "6.0.0"
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.81"
unicase = "2.6.0"
color-eyre = "0.6.1"

[dev-dependencies]
tempfile = "3.8.1"
